# pdf-tiered-extractor

./: .gitignore  README.md  pyproject.toml
specs/: 001-pdf-tiered-extractor-spec.md
src/pdf_tiered_extractor/: __init__.py  cli.py
src/pdf_tiered_extractor/core/: __init__.py  analyzer.py  pipeline.py  validator.py
src/pdf_tiered_extractor/formatters/: __init__.py  json_formatter.py  markdown_formatter.py  text_formatter.py
src/pdf_tiered_extractor/tiers/: __init__.py  tier1_pymupdf.py  tier2_docling.py  tier3_ocr.py
tests/: __init__.py  test_analyzer.py  test_image_ocr.py  test_pipeline.py  test_validator.py
