[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-tiered-extractor"
version = "0.1.0"
description = "Biblioteca Python para extração progressiva/em cascata de documentos PDF para TXT, Markdown e JSON."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Antigravity Dev Team"}
]
dependencies = [
    "pymupdf>=1.23.0",
    "pymupdf4llm>=0.0.10",
    "pydantic>=2.0.0",
    "click>=8.0.0"
]

[project.optional-dependencies]
docling = [
    "docling>=2.0.0"
]
dev = [
    "pytest>=7.0.0",
    "black",
    "ruff"
]

[project.scripts]
pdf-extract = "pdf_tiered_extractor.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
